@@ -37,7 +37,75 @@ class CamundaTaskInitiationConsentedTest extends DmnDecisionTableBaseUnitTest {
     @Test
     void ifThisTestFailsNeedsUpdatingWithYourChanges() {
         DmnDecisionTableImpl logic = (DmnDecisionTableImpl) decision.getDecisionLogic();
-        assertThat(logic.getRules()).hasSize(1);
+        assertThat(logic.getRules()).hasSize(2);
+    }
+
+    @Test
+    void givenAttachScannedDocsWithUnhandledEvidenceShouldCreateProcessScannedDocumentsTask() {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue("eventId", "attachScannedDocs");
+        inputVariables.putValue("postEventState", "");
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+        List<Map<String, Object>> results = dmnDecisionTableResult.getResultList();
+
+        assertThat(results).hasSize(1);
+        Map<String, Object> result = results.getFirst();
+
+        assertThat(result.get("taskId")).isEqualTo("processScannedDocuments");
+        assertThat(result.get("name")).isEqualTo("Process Scanned Documents");
+        assertThat(result.get("delayDuration")).isEqualTo(0);
+        assertThat(result.get("processCategories")).isEqualTo("CHANGE_LATER_PROCESS_CATEGORIES");
+
+        // delayUntil is a json map; its delayUntil value is now() so it is non-deterministic
+        @SuppressWarnings("unchecked")
+        Map<String, Object> delayUntil = (Map<String, Object>) result.get("delayUntil");
+        assertThat(delayUntil.get("delayUntilIntervalDays")).isEqualTo("0");
+        assertThat(delayUntil.get("delayUntil")).isNotNull();
+    }
+
+    @Test
+    void givenAttachScannedDocsWithEvidenceHandledNoShouldCreateProcessScannedDocumentsTask() {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue("eventId", "attachScannedDocs");
+        inputVariables.putValue("postEventState", "");
+        inputVariables.putValue("additionalData", Map.of("Data", Map.of("evidenceHandled", "No")));
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+        assertThat(dmnDecisionTableResult.getResultList()).hasSize(1);
+    }
+
+    @Test
+    void givenAttachScannedDocsWithEvidenceHandledYesShouldNotCreateTask() {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue("eventId", "attachScannedDocs");
+        inputVariables.putValue("postEventState", "");
+        inputVariables.putValue("additionalData", Map.of("Data", Map.of("evidenceHandled", "Yes")));
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+        assertThat(dmnDecisionTableResult.getResultList()).isEmpty();
+
+    }
+
+    @Test
+    void givenNonAttachScannedDocsEventWithEvidenceHandledAbsentShouldNotCreateTask() {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue("eventId", "someOtherEvent");
+        inputVariables.putValue("postEventState", "");
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+        assertThat(dmnDecisionTableResult.getResultList()).isEmpty();
+    }
+
+    @Test
+    void givenNonAttachScannedDocsEventWithEvidenceHandledNoShouldNotCreateTask() {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue("eventId", "someOtherEvent");
+        inputVariables.putValue("postEventState", "");
+        inputVariables.putValue("additionalData", Map.of("Data", Map.of("evidenceHandled", "No")));
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+        assertThat(dmnDecisionTableResult.getResultList()).isEmpty();
     }
 
     @ParameterizedTest
@@ -52,12 +120,13 @@ class CamundaTaskInitiationConsentedTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> results = dmnDecisionTableResult.getResultList();
 
         assertThat(results).hasSize(1);
-        Map<String, Object> result = results.get(0);
+        Map<String, Object> result = results.getFirst();
+
         assertThat(result.get("taskId")).isEqualTo("processApprovedOrder");
         assertThat(result.get("name")).isEqualTo("Process Approved Order");
         assertThat(result.get("delayDuration")).isEqualTo(0);
         assertThat(result.get("processCategories")).isEqualTo("CHANGE_LATER_PROCESS_CATEGORIES");
-
+        // delayUntil is a json map; its delayUntil value is now() so it is non-deterministic
         @SuppressWarnings("unchecked")
         Map<String, Object> delayUntil = (Map<String, Object>) result.get("delayUntil");
         assertThat(delayUntil.get("delayUntilIntervalDays")).isEqualTo("0");
